//run with: protoc -I . storage.proto --go_out=plugins=grpc:.
syntax = "proto3";
package main;

service Storage {
    rpc GetKey(Key) returns (Value) {}
    //gRPC service methods have exactly one input
    //message and exactly one output message.
    rpc PutKeyValue(KeyValue) returns (Empty) {}
}

message Key {
    string key = 1;
}

message Value {
    string value = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message Empty {}